# wemake-python-styleguide

./: .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  action.yml  appveyor.yml  diceRandom.py  evil.py  ex.py  ex1.py  flake.nix  layers.yml  nitpick-style.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sol.py  wrong.py
.github/: AI_POLICY.md  FUNDING.yml  bake.toml  dependabot.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: Bug.md  Bug.yaml  Rule_request.md  rule-request.md
.github/workflows/: codeql.yml  create-diagram.yml  depup.yml  misspell.yml  new-event-notify.yml  rebase.yml  relator.yml  test.yml  wps.yml
.pytest_cache/v/cache/: lastfailed  nodeids
.pytest_cache/v/flake8/: mtimes
.pytest_cache/v/isort/: mtimes
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/ISSUE_TEMPLATE/: Bug.md  bug.md
docs/_pages/: api.rst  checker.rst  constants.rst  errors.rst  glossary.rst  usage.rst
docs/_pages/errors/: base.rst  best_practices.rst  classes.rst  complexity.rst  consistency.rst  general.rst  imports.rst  index.rst  modules.rst  naming.rst  tokens.rst
docs/_pages/options/: config.rst  defaults.rst
docs/_pages/violations/: base.rst  best_practices.rst  consistency.rst  index.rst  naming.rst
docs/_pages/visitors/: base.rst
docs/_templates/: badges.html  github.html  moreinfo.html
docs/ext/: plugincodes.py
docs/pages/: api.rst  changelog.rst  checker.rst  formatter.rst  glossary.rst  types.rst  usage.rst
docs/pages/api/: checker.rst  contributing.rst  debugging.rst  formatter.rst  glossary.rst  index.rst  tranformations.rst  transformations.rst  (+1 more)
issue-1657/: prototype.py  test.py  testcase.txt
scripts/: action-config.cfg  check_generic_visit.py  entrypoint.sh  howtouse.txt  parse.py  tokens.py
styles/: absent-files.toml  darglint.toml  file-structure.toml  flake8.toml  flakeheaven.toml  flakehell.toml  isort.toml  mypy.toml  nitpick-style-wemake.toml  nitpick-style.toml  poetry.toml  styleguide.toml
temp_elton_chris/: short.py  test_cases.txt
tests/: conftest.py  test_config.py  test_errors.py  test_options.py  test_plugins.py  test_version.py  test_violations.py  violation_fixtures.py  whitelist.txt
tests/fixtures/: base_rules.py  correct.py  external_plugins.py  formatter1.py  formatter2.py  high_complexity.py  noqa.py  noqa_controlled.py  notebook.ipynb  regression.py  setup.cfg  wrong_function_call.py  wrong_import.py  wrong_keyword.py  wrong_nested.py  wrong_variable.py
tests/plugins/: ast_tree.py  async_sync.py  compile_code.py  files.py  tokenize_parser.py  violations.py
tests/test_checker/: test_config.py  test_exception_handling.py  test_hypothesis.py  test_invalid_options.py  test_module_names.py  test_noqa.py  test_presets.py
tests/test_checkers/: test_base_rules.py  test_common_rules.py  test_config.py  test_high_complexity.py  test_module_names.py  test_noqa.py  test_wrong_function_call.py  test_wrong_import.py  test_wrong_keyword.py  test_wrong_nested.py  test_wrong_variable.py
tests/test_cli/: test_explain.py  test_explain_internals.py
tests/test_formatter/: test_formatter_output.py
tests/test_logic/: test_prop_access.py  test_walrus.py  test_walrus_unwrap.py
tests/test_mcp/: test_flake8_runner.py  test_server.py
tests/test_options/: conftest.py  test_config.py  test_option_rules.py  test_validate_domain_names_options.py
tests/test_regressions/: test_regression112.py  test_regression2127.py  test_regression_112.py  test_regression_for_else.py
tests/test_transformations/: test_enhancements.py
tests/test_violations/: test_codes.py  test_definition_order.py  test_docs.py  test_implementation.py
tests/test_visitors/: conftest.py  test_base.py  test_if_else_one_line.py  test_wrong_string.py
wemake_python_styleguide/: Pipfile  __init__.py  checker.py  compat.py  config.py  constants.py  errors.py  formatter.py  types.py  version.py
wemake_python_styleguide/checkers/: base_rules.py  high_complexity.py  wrong_function_call.py  wrong_import.py  wrong_keyword.py  wrong_nested.py  wrong_variable.py
wemake_python_styleguide/cli/: __init__.py  application.py  cli_app.py  output.py
wemake_python_styleguide/compat/: aliases.py  constants.py  functions.py  nodes.py  packaging.py  routing.py  types.py
wemake_python_styleguide/errors/: base.py  best_practices.py  classes.py  complexity.py  consistency.py  general.py  imports.py  modules.py  naming.py  tokens.py
wemake_python_styleguide/helpers/: functions.py  variables.py
wemake_python_styleguide/logic/: baseline.py  calls.py  collections.py  compares.py  complexity.py  cst.py  exceptions.py  filenames.py  functions.py  ifs.py  imports.py  keywords.py  loops.py  nodes.py  operators.py  prop_access.py  recursion.py  returns.py  safe_eval.py  scopes.py  source.py  strings.py  system.py  tokens.py  variables.py  walk.py  walrus.py
wemake_python_styleguide/logics/: classes.py  collections.py  filenames.py  functions.py  imports.py  limits.py  nodes.py  operators.py  tokens.py  variables.py
wemake_python_styleguide/mcp/: __init__.py  __main__.py  flake8_runner.py  server.py
wemake_python_styleguide/options/: config.py  defaults.py  validation.py
wemake_python_styleguide/patches/: baseline.py
wemake_python_styleguide/presets/: __init__.py  complexity.py  general.py  tokens.py
wemake_python_styleguide/transformation/: ast_tree.py
wemake_python_styleguide/transformations/: ast_tree.py
wemake_python_styleguide/violations/: __init__.py  annotations.py  base.py  best_practices.py  complexity.py  consistency.py  naming.py  oop.py  refactoring.py  system.py
wemake_python_styleguide/visitors/: base.py  decorators.py  high_complexity.py  wrong_class.py  wrong_function_call.py  wrong_import.py  wrong_keyword.py  wrong_name.py  wrong_nested.py  wrong_string.py  wrong_variable.py
(+795 files in other folders)
