[tool.poetry]
name = "wemake-python-styleguide"
version = "0.19.2"
description = "The strictest and most opinionated python linter ever"

license = "MIT"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/wemake-python-styleguide"
homepage = "https://wemake-python-styleguide.rtfd.io"

keywords = [
  "flake8",
  "flake8-plugin",
  "flake8-formatter",
  "linter",
  "wemake.services",
  "styleguide",
  "code quality",
  "pycqa"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]

[tool.poetry.urls]
"Funding" = "https://opencollective.com/wemake-python-styleguide"

[tool.poetry.plugins."flake8.extension"]
WPS = "wemake_python_styleguide.checker:Checker"

[tool.poetry.plugins."flake8.report"]
wemake = "wemake_python_styleguide.formatter:WemakeFormatter"

[tool.poetry.dependencies]
python = "^3.10"

flake8 = "^7.1"
attrs = "*"
typing_extensions = ">=4.0"
pygments = "^2.4"


[tool.poetry.group.dev.dependencies]

pytest = "^8.1"
pytest-cov = "^6.0"
pytest-randomly = "^3.12"
pytest-xdist = "^3.6"
coverage-conditional-plugin = "^0.9"
syrupy = "^4.6"
hypothesis = "^6.35"
hypothesmith = "^0.3"

mypy = "^1.13"
types-flake8 = "^7.1"

import-linter = "^2.0"

astpath = "^0.9"
lxml = "^5.1"
nbqa = "^1.2"
ruff = "^0.8"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.1,<9.0"
sphinx-autodoc-typehints = "^2.0"
sphinxcontrib-mermaid = "^1.0"
added-value = "^0.24"
tomli = "^2.0"
myst-parser = "^4.0"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = 'py310'
line-length = 80
extend-exclude = [
  # Intentional bad code:
  "tests/fixtures/**",
  "tests/**/__snapshots__/**",
  # 3rd party:
  "wemake_python_styleguide/logic/tokens/docstrings.py",
]

[tool.ruff.format]
quote-style = 'single'
docstring-code-format = false

[tool.ruff.lint]
ignore = [
  "D100",
  "D104",
  "D106",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "COM812",  # conflicts with `ruff format`
  "TRY003",  # long exception messages from `tryceratops`
  "RUF100",  # conflicts with flake8
]
select = [
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "C90",  # maccabe
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "E",    # pycodestyle
  "F",    # pyflakes
  "FLY",  # pyflint
  "G",    # flake8-string-format
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "Q",    # flake8-quotes
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "PERF", # perflint
  "RET",  # flake8-return
  "RUF",  # ruff
  "FURB", # refurb
  "S",    # flake8-bandit
  "SIM",  # flake8-simpify
  "UP",   # pyupgrade
  "W",    # pycodestyle

  "T100", # flake8-debugger
  "LOG",  # flake8-logging
  "PT",   # flake8-pytest-style
  "ERA",  # flake8-eradicate
]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.per-file-ignores]
"wemake_python_styleguide/visitors/ast/*.py" = ["N802"]
"tests/*.py" = [
    "S101",
    "S105",
]
"wemake_python_styleguide/types.py" = ["D102"]
